Working on table/header

--- a/table.html
+++ b/table.html
@@ -11,13 +11,38 @@
 
 <body>
   <header>
-
+    <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+    <nav>
+      <ul>
+        <li>
+          <a href="/">About</a>
+        </li>
+        <li>
+          <a href="/">Metagraph Table</a>
+        </li>
+        <li>
+          <a href="/">Gridlandia
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  <main>
-    <h1>Table of Known Grid Metagraph Sizes</h1>
 
-    <table>
-<thead>
+  <main>
+    <h1>Table of Known Grid Metagraphs</h1>
+    <p>
+      The Metric Geometry and Gerrymandering Group (MGGG) is a small Boston-based team of mathematicians launched by
+      Moon Duchin of Tufts University. Our mission is to study applications of geometry and computing to U.S.
+      redistricting. We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
+    </p>
+    <div class="table-container">
+      <table>
+
+    <colgroup class="row-labels"></colgroup>
+    <colgroup class="rook" span="5"></colgroup>
+    <colgroup class="queen" span="5">
+    </colgroup>
+    <thead>
       <tr>
         <th></th>
         <th colspan="5" scope="colgroup">Rook</th>
@@ -51,27 +76,28 @@
 <tr><th>4x4 &rarr; 8</th><td>36</td><td>34,524</td><td>153,129</td><td>251,236</td><td>340,198</td><td>280</td><td>568,539</td><td>2,629,300</td><td>4,262,934</td><td>5,362,109</td></tr>
 </tbody>
 <tbody>
-<tr><th>5x5 &rarr; 5</th><td>4,006</td><td>193,152</td><td>1,473,580</td><td>6,201,654</td><td>?</td><td>1,397,790</td><td></td><td></td><td></td><td></td></tr>
+<tr><th>5x5 &rarr; 5</th><td>4,006</td><td>193,152</td><td>1,473,580</td><td>6,201,654</td><td>?</td><td>1,397,790</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
 </tbody>
 <tbody>
-<tr><th>6x6 &rarr; 2</th><td>80,518</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 3</th><td>264,500</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 4</th><td>442,791</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 6</th><td>451,206</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 9</th><td>128,939</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 12</th><td>80,092</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th>6x6 &rarr; 18</th><td>6,728</td><td>?</td><td>?</td><td>?</td><td>?</td><td>3,037,561</td><td></td><td></td><td></td><td></td></tr>
+<tr><th>6x6 &rarr; 2</th><td>80,518</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 3</th><td>264,500</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 4</th><td>442,791</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 6</th><td>451,206</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 9</th><td>128,939</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 12</th><td>80,092</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
+<tr><th>6x6 &rarr; 18</th><td>6,728</td><td>?</td><td>?</td><td>?</td><td>?</td><td>3,037,561</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
 </tbody>
 <tbody>
-<tr><th>7x7 &rarr; 7</th><td>158,753,814</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>7x7 &rarr; 7</th><td>158,753,814</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
 </tbody>
 <tbody>
-<tr><th>8x8 &rarr; 8</th><td>1.87497E+11</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>8x8 &rarr; 8</th><td>1.87497E+11</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
 </tbody>
 <tbody>
-<tr><th>9x9 &rarr; 9</th><td>7.06153E+14</td><td>?</td><td>?</td><td>?</td><td>?</td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>9x9 &rarr; 9</th><td>7.06153E+14</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td><td>?</td></tr>
 </tbody>
 </table>
+    </div>
   </main>
 </body>
 
