Going to leave it here for now

--- a/table.html
+++ b/table.html
@@ -5,36 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Table of Known Grid Metagraph Sizes | Metric Geometry and Gerrymandering Group</title>
+  <title>The Sizes of Known Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
   <link rel="stylesheet" href="table.css">
 </head>
 
 <body>
-  <header>
+  <!--  <header>
     <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
-    <nav>
-      <ul>
-        <li>
-          <a href="/">About</a>
-        </li>
-        <li>
-          <a href="/">Metagraph Table</a>
-        </li>
-        <li>
-          <a href="/">Gridlandia
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  </header>-->
 
   <main>
-    <h1>Table of Known Grid Metagraphs</h1>
+    <h1>The Sizes of Known Grid Metagraphs</h1>
+    <!--
     <p>
-      The Metric Geometry and Gerrymandering Group (MGGG) is a small Boston-based team of mathematicians launched by
-      Moon Duchin of Tufts University. Our mission is to study applications of geometry and computing to U.S.
-      redistricting. We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
-    </p>
+     ...description of the table... 
+    </p
+   -->
     <div class="table-container">
       <table>
 
