--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <title>Metric Geometry and Gerrymandering Group</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <meta charset="utf-8" />
+  <title>Metric Geometry and Gerrymandering Group</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-    <img src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+  <img src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
 </body>
 
 </html>
