--- a/table_template.html
+++ b/table_template.html
@@ -5,17 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>The Sizes of Known Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
+  <title>The Known Sizes of Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
   <link rel="stylesheet" href="table.css">
 </head>
 
 <body>
-  <!--  <header>
-    <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
-  </header>-->
+  <header>
+    <a href="/">
+      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+    </a>
+  </header>
 
   <main>
-    <h1>The Sizes of Known Grid Metagraphs</h1>
+    <h1>The Known Sizes of Grid Metagraphs</h1>
     <!--
     <p>
      ...description of the table... 
