--- a/table.html
+++ b/table.html
@@ -33,8 +33,8 @@
         <thead>
           <tr>
             <th></th>
-            <th colspan="5" scope="colgroup" class="rook-heading">Rook</th>
-            <th colspan="5" scope="colgroup" class="queen-heading">Queen</th>
+            <th colspan="5" scope="colgroup" class="rook-heading">Rook &#9814;</th>
+            <th colspan="5" scope="colgroup" class="queen-heading">Queen &#9813;</th>
           </tr>
           <tr>
             <th></th>
