No background color in header

--- a/proto-home/index.html
+++ b/proto-home/index.html
@@ -12,8 +12,11 @@
 
 <body>
   <header>
-    <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
-    <h1>Metric Geometry and Gerrymandering Group</h1>
+    <a href="/" class="logo-link">
+      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+    </a>
+    <h1><a href="/">
+        Metric Geometry and Gerrymandering Group</a></h1>
   </header>
   <main>
     <a class="feature" href="/metagraph/">
