--- a/proto-home/index.html
+++ b/proto-home/index.html
@@ -11,6 +11,23 @@
 </head>
 
 <body>
+  <nav>
+    <ul class="nav-links">
+      <li>
+        <a href="/">About MGGG</a>
+      </li>
+      <!-- <li>
+        <a href="/">Our Work</a>
+      </li>
+      <li>
+        <a href="/">Who We Arek</a>
+      </li> -->
+      <li>
+        <a href="/donate.html">Donate</a>
+      </li>
+
+    </ul>
+  </nav>
   <header>
     <a href="/" class="logo-link">
       <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
@@ -18,19 +35,13 @@
     <h1><a href="/">
         Metric Geometry and Gerrymandering Group</a></h1>
   </header>
-  <main>
-    <a class="feature" href="/metagraph/">
-      <article>
-        <figcaption class="article-type">Interactive</figcaption>
-        <h2>Welcome to Gridlandia!</h2>
-        <summary>An interactive introduction to the math of redistricting.</summary>
-        <img src="gridlandia.svg" alt="Metagraph of a 4x4 grid">
-      </article>
-    </a>
+
+  <main class="two-column">
     <article id="about">
-      <h2 class="headline">Cool mission statement.</h2>
+      <!-- <h2 class="headline"></h2> -->
       <p>
-        The Metric Geometry and Gerrymandering Group (MGGG) is a small Boston-based team of mathematicians launched by
+        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a small Boston-based team of
+        mathematicians launched by
         Moon
         Duchin of Tufts University. Our mission is to study applications of geometry and computing to U.S.
         redistricting.
@@ -40,23 +51,51 @@
         Our goals are:
       </p>
       <ul>
-        <li>to pursue cutting-edge research in the practically relevant applications of geometry, topology, and
+        <li>to <strong>pursue cutting-edge research</strong> in the practically relevant applications of geometry,
+          topology, and
           computing
           to the redistricting problem;</li>
-        <li>to foster collaboration with researchers in statistics, supercomputing, law, political science, and other
+        <li>to <strong>foster collaboration</strong> with researchers in statistics, supercomputing, law, political
+          science, and other
           fields; </li>
-        <li>to facilitate direct civic engagement by training scholars from a variety of quantitative backgrounds to
+        <li>to <strong>facilitate direct civic engagement</strong> by training scholars from a variety of quantitative
+          backgrounds to
           serve as expert witnesses and consultants in redistricting cases;</li>
-        <li>to educate the public, both through direct outreach and by helping college and high school teachers
+        <li>to <strong>educate the public</strong>, both through direct outreach and by helping college and high school
+          teachers
           incorporate units on voting, gerrymandering, and civil rights into the mathematics curriculum;</li>
-        <li>to build a diverse community of mathematically inclined people around the country and give them the
+        <li>to <strong>build a diverse community</strong> of mathematically inclined people around the country and give
+          them the
           knowledge
           and the tools to hold map-drawers accountable when 2020 comes around.</li>
       </ul>
+      <p class="support">The Metric Geometry and Gerrymandering Group is a project supported by the Jonathan M. Tisch
+        College of Civic Life at Tufts University. Tisch College strives to strengthen civic engagement and political
+        learning, and is proud to support the MGGG’s work to solve some of the most pressing problems of democracy.
+      </p>
+
+
     </article>
+    <div>
+      <article class="feature">
+        <a href="/metagraph/">
 
-
+          <figcaption class="article-type">Interactive</figcaption>
+          <h2>Welcome to Gridlandia!</h2>
+          <summary>An interactive introduction to the math of redistricting.</summary>
+          <img src="gridlandia.svg" alt="Metagraph of a 4x4 grid">
+        </a>
+      </article>
+    </div>
+    </a>
   </main>
+
+  <footer>
+    <p class="copyright">
+      &#169; 2018 Metric Geometry and Gerrymandering Group
+    </p>
+
+  </footer>
 </body>
 
 </html>
