--- a/proto-home/donate.html
+++ b/proto-home/donate.html
@@ -14,7 +14,7 @@
   <nav>
     <ul class="nav-links">
       <li>
-        <a href="/">About MGGG</a>
+        <a href="index.html">About MGGG</a>
       </li>
       <!-- <li>
                     <a href="/">Our Work</a>
@@ -23,7 +23,7 @@
                     <a href="/">Who We Arek</a>
                   </li> -->
       <li>
-        <a href="/donate.html">Donate</a>
+        <a href="donate.html">Donate</a>
       </li>
     </ul>
   </nav>
