Add resources page

--- a/proto-home/donate.html
+++ b/proto-home/donate.html
@@ -14,7 +14,10 @@
   <nav>
     <ul class="nav-links">
       <li>
-        <a href="index.html">About MGGG</a>
+        <a href="index.html">About</a>
+      </li>
+      <li>
+        <a href="resources.html">Resources</a>
       </li>
       <!-- <li>
                     <a href="/">Our Work</a>
@@ -35,25 +38,23 @@
         Metric Geometry and Gerrymandering Group</a></h1>
   </header>
   <main>
-    <!-- <h2 class="headline"></h2> -->
     <article id="donate">
       <h2 class="headline">Donate</h2>
-
       <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
         multidisciplinary work
         on geometric aspects of redistricting.</h3>
-      <p>MGGG is based at Tufts and so our fundraising goes through the university. The link below will take
-        you to the
-        standard Tufts donation page, with “Geometry of Redistricting” pre-selected as the area of giving.
-        Donations
-        are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly to
-          MGGG</strong>.
-        Please ignore the Tufts-specific questions.</p>
       <figure class="donate">
         <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343" target="_blank">
           <h3>Donate to MGGG!</h3>
         </a>
       </figure>
+      <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above will take
+        you to the
+        standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of giving.
+        Donations
+        are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly to
+          MGGG</strong>.
+        Please ignore the Tufts-specific questions.</p>
 
       <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may include
         the
