--- a/proto-home/index.html
+++ b/proto-home/index.html
@@ -14,7 +14,10 @@
   <nav>
     <ul class="nav-links">
       <li>
-        <a href="index.html">About MGGG</a>
+        <a href="index.html">About</a>
+      </li>
+      <li>
+        <a href="resources.html">Resources</a>
       </li>
       <!-- <li>
         <a href="/">Our Work</a>
