Shadows and light nav

--- a/proto-home/index.html
+++ b/proto-home/index.html
@@ -32,7 +32,7 @@
     </ul>
   </nav>
   <header>
-    <a href="/" class="logo-link">
+    <a href="/">
       <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
     <h1><a href="/">
