Add titles and rename About -> About MGGG

--- a/proto-home/index.html
+++ b/proto-home/index.html
@@ -14,7 +14,7 @@
   <nav>
     <ul class="nav-links">
       <li>
-        <a href="index.html">About</a>
+        <a href="index.html">About MGGG</a>
       </li>
       <li>
         <a href="resources.html">Resources</a>
