--- a/proto-home/donate.html
+++ b/proto-home/donate.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Metric Geometry and Gerrymandering Group</title>
+  <title>Donate | Metric Geometry and Gerrymandering Group</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -14,7 +14,7 @@
   <nav>
     <ul class="nav-links">
       <li>
-        <a href="index.html">About</a>
+        <a href="index.html">About MGGG</a>
       </li>
       <li>
         <a href="resources.html">Resources</a>
