Change source order

--- a/index.html
+++ b/index.html
@@ -72,12 +72,6 @@
           knowledge
           and the tools to hold map-drawers accountable when 2020 comes around.</li>
       </ul>
-      <p class="support">The Metric Geometry and Gerrymandering Group is a project supported by the Jonathan M. Tisch
-        College of Civic Life at Tufts University. Tisch College strives to strengthen civic engagement and political
-        learning, and is proud to support the MGGG’s work to solve some of the most pressing problems of democracy.
-      </p>
-
-
     </article>
     <div>
       <article class="feature">
@@ -90,7 +84,12 @@
         </a>
       </article>
     </div>
-    </a>
+    <article>
+      <p class="support">The Metric Geometry and Gerrymandering Group is a project supported by the Jonathan M. Tisch
+        College of Civic Life at Tufts University. Tisch College strives to strengthen civic engagement and political
+        learning, and is proud to support the MGGG’s work to solve some of the most pressing problems of democracy.
+      </p>
+    </article>
   </main>
 
   <footer>
