Fix some styling, add email

--- a/donate.html
+++ b/donate.html
@@ -93,10 +93,16 @@
   </main>
 
   <footer>
-    <p class="copyright">
-      &#169; 2018 Metric Geometry and Gerrymandering Group
-    </p>
-
+    <ul class="footer-items">
+      <li class="copyright">
+        &#169; 2018 Metric Geometry and Gerrymandering Group
+      </li>
+      <li>
+        <address>
+          <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail.com</a>
+        </address>
+      </li>
+    </ul>
   </footer>
 </body>
 
