--- a/index.html
+++ b/index.html
@@ -43,34 +43,23 @@
     <article id="about">
       <!-- <h2 class="headline"></h2> -->
       <p>
-        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a small Boston-based team of
-        mathematicians launched by
-        Moon
-        Duchin of Tufts University. Our mission is to study applications of geometry and computing to U.S.
-        redistricting.
+        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based working
+        group led by Moon Duchin of Tufts University and Justin Solomon of MIT. 
+        Our mission is to study applications of geometry and computing to U.S. redistricting.
         We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
       </p>
       <p>
         Our goals are:
       </p>
       <ul>
-        <li>to <strong>pursue cutting-edge research</strong> in the practically relevant applications of geometry,
-          topology, and
-          computing
-          to the redistricting problem;</li>
-        <li>to <strong>foster collaboration</strong> with researchers in statistics, supercomputing, law, political
-          science, and other
-          fields; </li>
-        <li>to <strong>facilitate direct civic engagement</strong> by training scholars from a variety of quantitative
-          backgrounds to
-          serve as expert witnesses and consultants in redistricting cases;</li>
-        <li>to <strong>educate the public</strong>, both through direct outreach and by helping college and high school
-          teachers
-          incorporate units on voting, gerrymandering, and civil rights into the mathematics curriculum;</li>
-        <li>to <strong>build a diverse community</strong> of mathematically inclined people around the country and give
-          them the
-          knowledge
-          and the tools to hold map-drawers accountable when 2020 comes around.</li>
+        <li>to <strong>pursue cutting-edge research</strong> in the basic science and 
+          practically relevant applications of geometry,
+          topology, and computing to the redistricting problem;</li>
+        <li>to build open-source <strong>tools and resources</strong> that create public access and analytical power 
+          for better understanding districts and their consequences;</li>
+        <li>to partner with <strong>civil rights organizations</strong> to reexamine and strengthen the 
+          quantitative toolkit for protecting voting rights;</li>
+        <li>to offer formal and informal <strong>expert consulting</strong> to stakeholders on all sides.</li>
       </ul>
     </article>
     <div>
@@ -85,9 +74,8 @@
       </article>
     </div>
     <article>
-      <p class="support">The Metric Geometry and Gerrymandering Group is a project supported by the Jonathan M. Tisch
-        College of Civic Life at Tufts University. Tisch College strives to strengthen civic engagement and political
-        learning, and is proud to support the MGGG’s work to solve some of the most pressing problems of democracy.
+      <p class="support">The Metric Geometry and Gerrymandering Group has major support from the Jonathan M. Tisch
+        College of Civic Life at Tufts University and the Amar G. Bose Research Grant Program at MIT.  
       </p>
     </article>
   </main>
