--- a/who.html
+++ b/who.html
@@ -49,4 +49,21 @@
         We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
 </p>
 
+ </article>
+  </main>
+
+  <footer>
+    <ul class="footer-items">
+      <li class="copyright">
+        &#169; 2018 Metric Geometry and Gerrymandering Group
+      </li>
+      <li>
+        <address>
+          <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail.com</a>
+        </address>
+      </li>
+    </ul>
+  </footer>
 </body>
+
+</html>
