--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         Our goals are:
       </p>
       <ul>
-        <li>to <strong>pursue cutting-edge research</strong> in the basic science and 
+        <li>to pursue cutting-edge <strong>research</strong> in the basic science and 
           practically relevant applications of geometry,
           topology, and computing to the redistricting problem;</li>
         <li>to build open-source <strong>tools and resources</strong> that create public access and analytical power 
           for better understanding districts and their consequences;</li>
-        <li>to partner with <strong>civil rights organizations</strong> to reexamine and strengthen the 
+        <li>to partner with <strong>civil rights</strong> organizations to reexamine and strengthen the 
           quantitative toolkit for protecting voting rights;</li>
-        <li>to offer formal and informal <strong>expert consulting</strong> to stakeholders on all sides.</li>
+        <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all sides.</li>
       </ul>
     </article>
     <div>
@@ -74,8 +74,10 @@
       </article>
     </div>
     <article>
-      <p class="support">The Metric Geometry and Gerrymandering Group has major support from the Jonathan M. Tisch
-        College of Civic Life at Tufts University and the Amar G. Bose Research Grant Program at MIT.  
+      <p class="support">The Metric Geometry and Gerrymandering Group has major support from the 
+        <a href="https://tischcollege.tufts.edu/">Jonathan M. Tisch
+          College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar G. 
+        Bose Research Grant Program</a> at MIT.  
       </p>
     </article>
   </main>
