--- a/who.html
+++ b/who.html
@@ -43,12 +43,20 @@
     <article id="about">
       <!-- <h2 class="headline"></h2> -->
       <p>
-        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based working
-        group led by Moon Duchin of Tufts University and Justin Solomon of MIT. 
-        Our mission is to study applications of geometry and computing to U.S. redistricting.
-        We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
-</p>
-
+       Ruth Buck  - part-time - geographer
+      </p>
+      <p>
+       Daryl DeFord - postdoc - network science, computing
+      </p>
+      <p>
+       Moon Duchin - faculty - geometry, topology, dynamical systems
+      </p>
+       <p>
+       Max Hully - software developer - geometry and analysis
+      </p>
+       <p>
+       Justin Solomon - faculty - geometric data processing
+      </p>
  </article>
   </main>
 
