--- a/who.html
+++ b/who.html
@@ -55,6 +55,9 @@
        Max Hully - software developer - geometry and analysis
       </p>
        <p>
+       Aidan Kestigian - program manager - philosophy of democracy
+      </p>       
+      <p>
        Justin Solomon - faculty - geometric data processing
       </p>
  </article>
