--- a/who.html
+++ b/who.html
@@ -43,7 +43,7 @@
     <article id="about">
       <!-- <h2 class="headline"></h2> -->
       <p>
-       Ruth Buck  - part-time - geographer
+       Ruth Buck  - part-time - geography
       </p>
       <p>
        Daryl DeFord - postdoc - network science, computing
