--- a/who.html
+++ b/who.html
@@ -49,7 +49,7 @@
        Daryl DeFord - postdoc - network science, computing
       </p>
       <p>
-       Moon Duchin - faculty - geometry, topology, dynamical systems
+        <a href="https://mduchin.math.tufts.edu">Moon Duchin</a> - faculty - geometry, topology, dynamical systems
       </p>
        <p>
        Max Hully - software developer - geometry and analysis
