Restructure folders, add bios

--- a/donate.html
+++ b/donate.html
@@ -32,13 +32,13 @@
   </nav>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
     <h1><a href="/">
         Metric Geometry and Gerrymandering Group</a></h1>
   </header>
   <main>
-    <article id="donate">
+    <article>
       <h2 class="headline">Donate</h2>
       <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
         multidisciplinary work
