--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <a href="/">Who We Arek</a>
       </li> -->
       <li>
+        <a href="who.html">Who We Are</a>
+      </li>
+      <li>
         <a href="donate.html">Donate</a>
       </li>
 
@@ -33,14 +36,14 @@
   </nav>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
     <h1><a href="/">
         Metric Geometry and Gerrymandering Group</a></h1>
   </header>
 
   <main class="two-column">
-    <article id="about">
+    <article>
       <!-- <h2 class="headline"></h2> -->
       <p>
         The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based working
@@ -72,7 +75,7 @@
         <a href="/metagraph/">
           <h2>Welcome to Gridlandia!</h2>
           <summary>An interactive introduction to the math of redistricting.</summary>
-          <img src="gridlandia.svg" alt="Metagraph of a 4x4 grid">
+          <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
         </a>
       </article>
     </div>
