--- a/src/table_template.html
+++ b/src/table_template.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
   </header>
 
