--- a/table.html
+++ b/table.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Known Sizes of Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" href="table.css">
+  <link rel="stylesheet" href="/static/table.css">
 </head>
 
 <body>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
   </header>
 
