--- a/resources.html
+++ b/resources.html
@@ -26,7 +26,7 @@
   </nav>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
     <h1>
       <a href="/">Metric Geometry and Gerrymandering Group</a>
@@ -97,7 +97,7 @@
         <a href="/metagraph/">
           <h2>Welcome to Gridlandia!</h2>
           <summary>An interactive introduction to the math of redistricting.</summary>
-          <img src="gridlandia.svg" alt="Metagraph of a 4x4 grid">
+          <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
         </a>
       </article>
     </div>
