--- a/who.html
+++ b/who.html
@@ -33,34 +33,55 @@
   </nav>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
     <h1><a href="/">
         Metric Geometry and Gerrymandering Group</a></h1>
   </header>
 
-  <main class="two-column">
-    <article id="about">
-      <!-- <h2 class="headline"></h2> -->
-      <p>
-       Ruth Buck  - part-time - geography
-      </p>
-      <p>
-       Daryl DeFord - postdoc - network science, computing
-      </p>
-      <p>
-        <a href="https://mduchin.math.tufts.edu">Moon Duchin</a> - faculty - geometry, topology, dynamical systems
-      </p>
-       <p>
-       Max Hully - software developer - geometry and analysis
-      </p>
-       <p>
-       Aidan Kestigian - program manager - philosophy of democracy
-      </p>       
-      <p>
-       Justin Solomon - faculty - geometric data processing
-      </p>
- </article>
+  <main>
+    <article>
+      <h2 class="headline">Who We Are</h2>
+      <ul class="bio-list">
+        <li class="bio">
+          <img src="static/buck.png" alt="photo of Ruth Buck">
+          <strong>Ruth Buck</strong> - part-time - geography
+        </li>
+
+        <li class="bio">
+          <img src="static/deford.jpg" alt="photo of Daryl DeFord">
+          <strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
+          with research interests in complex networks and the mathematics of social data. He completed his Ph.D. in
+          Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.
+        </li>
+
+        <li class="bio">
+          <img src="static/duchin.jpg" alt="photo of Moon Duchin">
+          <strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong>- faculty - geometry,
+          topology, dynamical systems</li>
+
+        <li class="bio">
+          <img src="static/hully.png" alt="photo of Max Hully">
+          <strong>Max Hully</strong> - software developer - geometry and analysis</li>
+
+        <li class="bio">
+          <img src="static/kestigian.jpg" alt="photo of Aidan Kestigian">
+          <strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
+          for MGGG, managing the group’s
+          research, civic, and fundraising initiatives. Prior to working for MGGG, Aidan was a graduate student at
+          Carnegie Mellon University and maintains research interests in voting theory and social & political
+          philosophy.</li>
+
+        <li class="bio">
+          <img src="static/solomon.jpg" alt="photo of Justin Solomon">
+          <strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads the Geometric Data
+          Processing Group in the MIT Computer
+          Science and Artificial Intelligence Laboratory (CSAIL), which studies problems at the intersection of
+          geometry, large-scale optimization, machine learning, and applications. He joined MGGG's leadership in 2017
+          and is directing theoretical research and implementation for algorithmic approaches to generating and
+          analyzing districting plans.</li>
+      </ul>
+    </article>
   </main>
 
   <footer>
